# bear-hub

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE.md  README.md  bear-hub.service  pyproject.toml
docs/: wiring.md
src/: app.py  ball_counter.py  config.py  leds.py  main.py  modbus.py  motors.py  network.py  nt_client.py  sacn_receiver.py
src/web/: server.py
src/web/static/: admin.html  app.js  debug.html  index.html  styles.css
tests/: conftest.py  test_app.py  test_ball_counter.py  test_leds.py  test_modbus.py  test_motors.py  test_sacn_receiver.py
tools/: test_ball_sensors.py
