[project]
name = "bear-hub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "numpy>=1.26.0",
    "pymodbus>=3.6.0",
    "sacn>=1.9.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# robotpy-ntcore is installed separately — see INSTALL.md
pi = ["lgpio>=0.2.2", "spidev>=3.6"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "httpx>=0.26.0", "ruff>=0.3.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
